--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             align-items: center;
             justify-content: center;
             /* ❌ REPLACE THESE 3 LINES WITH YOUR GOOGLE DRIVE LINKS */
-            background-image: url('https://drive.google.com/file/d/1c_J7xx8Cro6ki2cqOE2GDXnZ0iJBlhVM/view?usp=drive_link');
+            background-image: url('before.jpg_optimized_1500.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -30,7 +30,7 @@
 
             body.love-mode {
                 /* ❌ REPLACE THIS LINE WITH YOUR POST-YES IMAGE */
-                background-image: url('https://drive.google.com/file/d/1x4t78XKMwFmlIv-su03m2iicalcyruUJ/view?usp=drive_link');
+                background-image: url('after.jpg_optimized_1500.jpg');
             }
 
         .love-symbol {
@@ -344,5 +344,6 @@
     </script>
 </body>
 </html>
+
 
 
