--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <div class="celebration hidden" id="celebration">
         <div class="photo-frame">
             <!-- ❌ REPLACE WITH YOUR COUPLE PHOTO ID -->
-            <img src="couple.JPG" />
+            <img src="lovesy.jpg" />
         </div>
         <h2>Yay! You said YES! 💘</h2>
         <p>It's you and me, forever and always! ❤️</p>
@@ -344,6 +344,7 @@
     </script>
 </body>
 </html>
+
 
 
 
