--- a/index.html
+++ b/index.html
@@ -281,8 +281,7 @@
 
     <div class="container" id="mainContent">
         <h1>Will you be my Valentine? 💕</h1>
-       // <p>I built this page just for you... So what do you say? 💝</p>
-        <div class="buttons">
+               <div class="buttons">
             <button id="yesBtn">Yes 💖</button>
             <button id="noBtn">No 😜</button>
         </div>
@@ -293,7 +292,7 @@
             <!-- ❌ REPLACE WITH YOUR COUPLE PHOTO ID -->
             <img src="lovesy.jpg" />
         </div>
-       // <h2>Yay! You said YES! 💘</h2>
+       /* <h2>Yay! You said YES! 💘</h2>*/
         <p>It's you and me, forever and always! ❤️</p>
     </div>
 
@@ -344,6 +343,7 @@
     </script>
 </body>
 </html>
+
 
 
 
